--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -1,7 +1,7 @@
 body{
     background-color: aquamarine;
     h1{
-        font-size: 100px;
-        color: blue;
+        font-size: 80px;
+        color:brown;
     }
 }
